--- a/css/discussion2_rwd.css
+++ b/css/discussion2_rwd.css
@@ -455,6 +455,9 @@
     }
 }
 
+/* content */
+
+
 @media (max-width: 963px){
     .cards-right{
         display: none;
@@ -462,8 +465,17 @@
     .cards-left{
         width:100%;
     }
+    div.pagination_block{
+      display: none;
+    }
 }
 
+@media (max-width: 768px){
+  .cards{
+    margin-top: 80px;
+  } 
+
+}
 @media (max-width: 557px){
     .ant-avatar-icon>img{
         width: 100px;
@@ -477,6 +489,9 @@
         height: 24px;
         left: 68%;
     }
+    .voice-container{
+      display: none;
+    }
 }
 
 @media (max-width: 500px){
@@ -484,6 +499,11 @@
         width: 70px;
       height: 70px;
     }
+    .title-none{
+      display: none;
+    }
+
+
 }
 
 
@@ -501,32 +521,10 @@
     text-align: center;
     line-height: 40px;
     cursor: pointer;
-
-
-
-
-    /* original */
-/* 
-display: inline-block;
-margin-top: 60px;
-margin-bottom: 80px;
-margin-left: 50%;
-transform: translateX(-50%);
-
-padding: 0 15px;
-width: 180px;
-height: 56px;
-font-size: 18px;
-color: #fff;
-background-image:linear-gradient(270deg,#64d4b8,#17ad99);
-box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 25px 0px;
-border-radius: 4px;
-text-align: center;
-justify-content: center;
-line-height: 56px;
-cursor: pointer; */
-
-
+    }
+    
+    .partner-card-information p{
+      display: none;
     }
 }
 
@@ -578,21 +576,6 @@ cursor: pointer; */
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   /* footer */
   .footer-part1{
       border: 1px solid green;
@@ -633,17 +616,9 @@ cursor: pointer; */
       
   }
   
-  .footer-icon{
-      display: flex;
-      border: 1px solid blue;
-      width: 10%;
-      height: 50px;
-      margin: 0 auto;
-      flex-direction: row;
-      align-items: flex-end;
-  }
+
   .footer-icon img{
-      padding-right: 12px;
+      padding-right: 10px;
   
   }
 }
