--- a/css/lanwiz_blog2.css
+++ b/css/lanwiz_blog2.css
@@ -9,253 +9,134 @@ body{
     font-family: 'Comic Neue', cursive, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif!important;
    
 }
-
-.logo{
-    position: absolute;
-    left:60px;
-    top: 10px;
-    width: 68x; 
-    height: 68px;   
-    z-index: 999;
-    cursor: pointer;
+.blog-cover{
+  border: 3px solid green;
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  padding-top: 59%;
+  background-image: url(../picture/people/man_laptop3.jpg);
+  background-size: cover;
+}
+.menu { 
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+   border: 1px solid red;
+  width: 100%;
+  /* height: 8%; */
+  display: flex;
+  background: #272626; opacity: 0.8;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+}
+.menu ul{
+margin: auto;
+margin-right: 50px;
+width: 60%;
+}
+.menu li {
+  border: 1px solid yellow;
+ float: right;
+  list-style: none;
+  font-size: 16px;
+ /* margin: 0 auto; */
+ margin: 12px;
+  margin-left: 12px;
+  padding: 6px 6px 6px 10px;
 }
 
-    ul.nav_list{
-      display: flex;
-      position: absolute;
-      top: 10px;
-      left: 160px;
-      z-index: 999;
-    
-    /* border: 1px solid red; */
-  }
-   /* .language-exchange{
-      border: 1px solid green;
-   } */
-  .language_block{
-      cursor: pointer;
-      /* border: 1px solid green; */
-  }
-  ul.nav_list>li {
-      
-      color: white;
-      list-style: none;
-      display: inline-block;
-      border: 1px solid white;
-      /* padding: 5px 5px; */
-      margin: 10px;
-      border-radius: 10px;
-      cursor: pointer;
-     
-    /* background-color: white;*/
-    /* opacity: .2;  */
-  
-  }
-  ul.nav_list>li:hover{
-      
-      background-color: white; opacity: 0.8;
-      border: 1px solid white;
-      color: rgb(73, 73, 73);
-  }
-  
-  .dropdown-block{
-  font-size: 1rem;
-    position: relative;
-    padding: 10px 10px;
-    box-sizing: border-box;
-    min-width: 100px;
+.menu li a {
+  text-decoration: none;
+  color:#fff;
+  transition: color linear 0.15s;
+  cursor: pointer;
+}
+
+.menu-logo {
+ 
+  width: 45px;
+  height: 45px;
+  margin: 5px auto auto;
+  margin-left: 20px;
+}
+
+.menu .menu-logo a {
+  color: #fff;
+}
+
+.menu a:hover, .menu  {
+  text-decoration: none;
+  color: #17ad99;
+}
+
+.toggle-nav {
+  display: none;
+  /* z-index: 9; */
+}
+
+
+
+
+
+.blog-cover>div.blog-cover-caption{
+    position: absolute;
+    top: 40%;
+    font-size: 24px;
+    transform: translateY(-50%);
     text-align: center;
-  }
-  
-  div.dropdown-block:hover ul.dropdown-list{
-      display: block;
-    }
-  
-  
-  
-  .dropdown-block ul.dropdown-list{
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      position: absolute;
-      right: 0;
-      top: 40px;
-      background-color: white;
-      min-width: 100%;
-      display: none;
-      /* border: 1px solid black; */
-      border-radius: 10px;
-    } 
-    
-    .dropdown-block ul.dropdown-list>li>a{
-    font-size: 1rem;
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
-    padding: 10px 0;
-     
-    position: relative;
-    }
-  
-    .dropdown-block ul.dropdown-list>li>a::after{
-    content: "";
-    position: absolute;
-    width: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
-    height: 1px;
-    background-color: gray;
-  }
-  
-  
-  
-  .dropdown-block ul.dropdown-list>li> a:hover{
-      background-color: black;
-      color: white;
-      
-    }
-  
-  
-    div.dropdown-block ul.dropdown-list > li a:hover{
-      background-color: black;
-      color: white;
-      
-    }
-  
-    ul.nav_list > li > a{
-      /* width: 100%; */
-      padding: 10px 10px ;
-    text-decoration: none;
-    text-align: center;
-    /* border: 1px solid blue; */
-    display: inline-block;
-    /* padding: 5px 10px; */
-    color: white;
-    /* min-width: 100px; */
-    }
-  
-  
-    ul.nav_list > li > a:hover{
-   
-      text-decoration: none;
-      /* border: 1px solid blue; */
-      display: inline-block;
-      padding: 10px 10px;
-      color: rgb(73, 73, 73);
-      
-      }
-  
-      
-  
-  
-    .language_link_list > li > a{
-    border: 1px solid gray;
-    color: black;
-    display: inline-block;
-    text-decoration: none;
-    width: 100%;
-    text-align: center;
-    padding: 5px 0;
-    }
-  
-    
-    ul.nav_list_right{
-      display: flex;
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      }
-    ul.nav_list_right>li {
-      color: white;
-      list-style: none;
-      display: inline-block;
-      padding: 5px 5px;
-      margin: 10px;
-      
-      /* background-color: white;*/
-      /* opacity: .2;  */
-      
-      }
-      ul.nav_list_right>li>a {
-       color: white;
-       display: inline-block;
-       text-decoration: none;
-       width: 100%;
-       text-align: center;
-       padding: 5px 0;
-      
-      }
-
-.top-banner{
-    border-radius: 0;
-    height: 60vh;
-    overflow: hidden;
-    /* width: 100%; */
-    height: 70vh;
-    position: relative;
-    /* border: 1px solid purple; */
-    /* background-image: url("./picture/16.jpg"); */
-    /* background-repeat: no-repeat; */
-    }
-.top-banner>img{
-    border-radius: 0;
-    width: 100%;
-    transform: translateY(-20%);
-}
-
-
-.homepage-menu{
-    position: absolute;
-}
-.homepage-menu-choic{
-    position: absolute;
-    
-}
-
-.homepage-native{
-    /* border: 1px solid blue; */
-    position: absolute;
-    top: 55%;
-    left: 20vw;
-    width: 800px;
-    transform: translateY(-70%); 
-    text-align: center;
-   
-}
-
-
- @keyframes typing {
-    from { width: 0; }
-  }
-  @keyframes caret {
-    50% { border-color: transparent; }
-  }
-  /* body{
-    background-color: black;
-  } */
-  .homepage-native h1 {
-    margin-bottom: 25%;
-    color: #fff;
-    z-index: 999;
-    font: bold 500%  font: 'Comic Neue', cursive;
-    width: 36ch;
-    white-space: nowrap;
-    display: inline-block;
-    overflow:hidden;
-    border-right: .05em solid;
-    animation: typing 6s steps(30),
-    caret 1s steps(1) infinite;
+    border: 10px solid blue;
+    width: 90%;
     margin-left: 50%;
     transform: translateX(-50%);
-    font-size: 46px;
-    line-height: 1.6; 
-    font-weight: 700;
-  }
+    color: white;
+}
+
+@keyframes typing {
+  from { width: 0; }
+}
+@keyframes caret {
+  100% { border-color: transparent; }
+}
+.blog-cover>div.blog-cover-caption>h1{
+  margin: 0 auto;
+  font: bold 150% Consolas, Monaco, monospace;
+  color: white;
+  width: 100%;
+  white-space: nowrap;
+  display: block;
+  overflow:hidden;
+  border-right: .05em solid;
+  animation: typing 3s steps(18),
+             caret 1s steps(1) infinite;
+}
 
 
+.blog-cover>div.blog-cover-caption-rwd{
+  display: none;
+  position: absolute;
+    top: 40%;
+    font-size: 24px;
+    transform: translateY(-50%);
+    text-align: center;
+    border: 10px solid blue;
+    width: 90%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    color: white;
+}
 
+.blog-cover>div.blog-cover-caption-rwd>h1{
+  display: none;
+  margin: 0 auto;
+  font: bold 130% Consolas, Monaco, monospace;
+  color: white;
+  width: 100%;
+  /* white-space: nowrap; */
+  /* overflow:hidden; */
+  border-right: .05em solid;
+}
 
+}
 .centent{
     margin: auto;
     width: 70%;
@@ -263,7 +144,8 @@ body{
 }
 
 
-  div.breadcrumb{
+  /* div.breadcrumb{
+    border: 1px solid green;
     background-color: #e9ecef;
     padding: 5px 10px;
     border-radius: 5px;
@@ -272,12 +154,14 @@ body{
     margin-top: 50px;
   }
   div.breadcrumb ol.breadcrumb_list{
+    border: 1px solid red;
     margin: auto;
     padding: 0;
     list-style: none;
     text-align: center;
   }
   div.breadcrumb ol.breadcrumb_list > li{
+    border: 2px solid yellow;
     display: inline-block;
     margin-right: 10px;
    
@@ -304,12 +188,11 @@ body{
   div.breadcrumb ol.breadcrumb_list > li > a:hover{
     color: #17ad99;
 
-  }
-  
+  } */
 
   ul.waterfall{
     border: solid 1px red;
-   width: 996px;
+   width: 80%;
    text-align: center;
     margin: auto;
     margin-top: 50px;
@@ -383,109 +266,130 @@ body{
     color: rgb(255, 255, 255);
     /* border: 2px solid purple; */
 }
-.wrapper.style {
-    background-color: #000;
-    color: white;
-    background-image: url(./picture/people/people_laptop.jpg);
-    background-size: cover;
-    /* background-attachment: fixed; */
-    background-position: center;
-    position: relative;
-    height: 600px;
+
+/* bottom-banner */
+
+
+.wrapper-style{
+  /* background-attachment: scroll; */
+  width: 100%;
+  text-align: center;
+  border: 2px solid blue;
+  color: white;
+  background-image: url(../picture/people/twomen_laptop.jpg);
+  background-size: cover;
+  /* background-attachment: fixed; */
+  background-position: center;
+
+}
+
+.foot{
+  padding: 0;
+  border: 8px solid green;
+  margin: auto;
+}
+.foot>h1.foot1{
+  border: 3px solid yellow;
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: rgb(53, 52, 52);
+  margin: 70px auto 30px;
+  /* padding-top: 100px; */
+  /* padding-bottom: 0px; */
+}
+.foot>p{
+  color:white;
+  font-size: 1.3rem;
+  line-height: 1.6;
+  width: 70%;
+  margin: 0 auto;
+  /* display: inline-flex; */
+  text-align: center;
+  /* margin-bottom: 30px; */
+  border: 2px solid purple;
 }
 
 
-footer{
-    display: flex;
-    height: 400px;
-    width: 100%;
-    background-size: cover;
-    background-color: white;
-    justify-content: center;
-    border-bottom: 1px solid #ddd;
+.get-started-btn{
+  display: inline-block;
+  margin: 30px auto 70px;
+  padding: 0 15px;
+  width: 240px;
+  height: 56px;
+  font-size: 18px;
+  color: #fff;
+  background-image:linear-gradient(270deg,#64d4b8,#17ad99);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 25px 0px;
+  border-radius: 4px;
+  text-align: center;
+  line-height: 56px;
+  cursor: pointer;
+}
+
+
+/* footer */
+
+.footer-part1{
+  border: 1px solid green;
+  width: 80%;
+  align-items: flex-start;
+  /* border-bottom: none; */
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.language-container{
+  width: 20%;
+  text-align: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid red;
+  margin-top: 50px;
+
+  color: grey;
+  line-height: 1.6;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+ 
 
 }
 .footer-language>h3{
-    color: black;
-    font-size: 16px;
-}
-.language-container{
-    display: inline-flex;
-    margin-right: 100px;
-    flex-direction: column;
-    justify-content: flex-start;
-    /* align-items: center; */
-    margin-top: 50px;
-    color: grey;
-    line-height: 1.6;
-    font-size: 14px;
-    
-    
+  font-family: 'Comic Neue', cursive, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif!important;
+  width: initial; 
+  color: black;
+  margin-bottom: 30px;
 }
 .language-container>ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding-bottom: 100px;
-}
-
-form.subscribe{
-    width:100%;
-   
-    /* border: 1px solid blue; */
-
-}
-.subscribe input{
-    margin-left: 30px;
-    text-align: center;
-    width: 100px;
-    height: 50px;
-    border-radius: 3px;
-    margin-bottom: 30px;
-    opacity: 0.9;
-}
-input.email{
-    width: 300px;
-}
-
-::placeholder { /* CSS 5*/
-    color: rgb(107, 107, 107);
-    font-size: 18px;
-    
-}
-::-webkit-input-placeholder { /* Chrome, Safari */
-    color: rgb(107, 107, 107);
-    font-size: 18px;
-}
-
-.subscribe-btn{
-    display: inline-block;
-    margin-top: 40px;
-    margin-bottom: 80px;
-    padding: 0 15px;
-    width: 120px;
-    height: 56px;
-    font-size: 18px;
-    color: #fff;
-    background-image:linear-gradient(270deg,#64d4b8,#17ad99);
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 25px 0px;
-    border-radius: 4px;
-    text-align: center;
-    line-height: 56px;
-    cursor: pointer;
-}
-
-.footer-part1{
-  height: 400px;
- text-align: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-bottom: 50px;
+  
 }
 
 .footer-icon{
-  padding: 18px;
-  margin-left: 900px;
+  display: flex;
+  border: 1px solid blue;
+  /* height: 50px; */
+  margin: 0 auto;
+  flex-direction: row;
+ justify-content: center;
+}
+.footer-icon img{
+  margin-top: 15px;
+  margin-right: 14px;
 
 }
+
