--- a/css/lanwiz_exchange2.css
+++ b/css/lanwiz_exchange2.css
@@ -44,7 +44,7 @@ body{
   /* margin-right: 50px; */
   width: 100%;
 }
-.menu li {
+.menu>ul>li {
     border: 1px solid yellow;
    float: right;
     list-style: none;
@@ -72,7 +72,7 @@ body{
     cursor: pointer;
 }
 
-.menu .menu-logo {
+.menu-logo {
     width: 45px;
     height: 45px;
     margin: auto;
@@ -154,81 +154,6 @@ body{
   border-radius: 0 10px 10px 0;
 }
 
-/* 
-
-.header-btn-filter-container{
-    z-index: 9;
-    position: fixed;
-    width: 100%;
-    top: 63px;
-    display: flex;
-    background: linear-gradient(0deg,#ffffff,#e8e9e9);
-    box-shadow: 0 5px 15px 0 rgba(0,0,0,.1);
-  }
-  .header-btn-filter{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
-    margin-left: 20px;
-    min-width: 88px;
-    width: auto;
-    height: 40px;
-    font-size: 14px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 10px;
-    color: #4d4d4d;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    white-space: nowrap;
-    -webkit-transition: all .2s;
-    transition: all .2s;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    box-shadow: 0 5px 15px 0 rgba(0,0,0,.1);
-  }
-  .header-btn-filter span{
-    padding: 10px;
-  }
-  .search-partner-input {
-    flex: 1 1 0%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-
-  }
-  .search-partner-input-btn{
-    background: linear-gradient(270deg,#64d4b8,#17ad99);
-    width: 48px;
-    height: 44px;
-    line-height: 64px;
-    text-align: center;
-    border-left: 1px solid #e9e9eb;
-    border-radius: 10px 0 0 10px;
-  
-  }
-  .search-partner-input-btn {
-    display: flex;
-  }
-  .search-partner-input-btn img {
-    cursor: pointer;
-    border-radius: 10px 0 0 10px;
-    margin-top: 10px;
-    margin-left: 12px;
-  }
-  .search-partner-input input {
-    width: 200px;
-    height: 40px;
-    font-size: 14px;
-    font-weight: 300;
-    padding: 0px 10px;
-    margin-right: 20px;
-    border-radius: 0 10px 10px 0;
-  }
-   */
 
    .search-results{
    
@@ -546,55 +471,66 @@ body{
 
 /* footer */
 .footer-part1{
-    border: 1px solid green;
-    width: 80%;
-    align-items: flex-start;
-    /* border-bottom: none; */
-    display: flex;
-    margin: 0 auto;
-    flex-direction: row;
-    justify-content: space-between;
+  border: 1px solid green;
+  width: 80%;
+  align-items: flex-start;
+  /* border-bottom: none; */
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .language-container{
-    width: 20%;
-    text-align: center;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    border: 1px solid red;
-    margin-top: 50px;
+  width: 20%;
+  text-align: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid red;
+  margin-top: 50px;
 
-    color: grey;
-    line-height: 1.6;
-    font-size: 14px;
+  color: grey;
+  line-height: 1.6;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+ 
 
 }
 .footer-language>h3{
-    color: black;
+  font-family: 'Comic Neue', cursive, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif!important;
+  width: initial; 
+  color: black;
+  margin-bottom: 30px;
 }
 .language-container>ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding-bottom: 50px;
-    
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-bottom: 50px;
+  
 }
 
 .footer-icon{
-    display: flex;
-    border: 1px solid blue;
-    width: 10%;
-    height: 50px;
-    margin: 0 auto;
-    flex-direction: row;
-    align-items: flex-end;
+  display: flex;
+  border: 1px solid blue;
+  /* height: 50px; */
+  margin: 0 auto;
+  flex-direction: row;
+ justify-content: center;
 }
 .footer-icon img{
-    margin-right: 14px;
+  margin-top: 15px;
+  margin-right: 14px;
 
 }
 
