--- a/css/lanwiz_index.css
+++ b/css/lanwiz_index.css
@@ -66,14 +66,15 @@ body{
     cursor: pointer;
 }
 
-.menu .menu-logo {
+.menu-logo {
     width: 45px;
     height: 45px;
-    margin: auto;
+    margin: 5px auto auto;
     margin-left: 20px;
 }
 
-.menu .menu-logo a {
+.menu-logo a {
+    
     color: #fff;
 }
 
@@ -86,169 +87,6 @@ body{
     display: none;
     /* z-index: 9; */
 }
-
-
-/* .top_nav{
-    position: absolute;
-    top: 0;
-    border: 3px solid red;
-    width: 100%;
-    height: 8%;
-    margin-left: 50%;
-    transform: translateX(-50%);
-}
-img.logo{
-    top: 10px;
-    position: absolute;
-    left: 5%;
-    bottom: 0;
-    float; left;
-    width: 68x;
-    height: 68px;
-}
-.nav_list_container{
-    position: relative;
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    border: 3px solid blue;
-    }
-
-ul.nav_list_left{
-    border: 3px solid yellow;
-    position: absolute;
-    left: 5%;
-    float: left;
-    
-    z-index: 999;
-
-}
-
-ul.nav_list_left>li {
-    color: white;
-    list-style: none;
-    display: inline-block;
-    border: 1px solid white;
-    margin: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-ul.nav_list_left>li:hover{
-    background-color: white; opacity: 0.8;
-    border: 1px solid white;
-    color: rgb(73, 73, 73);
-}
-
-ul.nav_list_left>li:hover ul.dropdown-block{
-    cursor: none;
-}
-
-.dropdown-block{
-    font-size: 1rem;
-    position: relative;
-    padding: 10px 10px;
-    box-sizing: border-box;
-    min-width: 100px;
-    text-align: center;
-}
-
-div.dropdown-block:hover ul.dropdown-list{
-    display: block;
-    border: 1px solid green;
-    margin: auto;
-    min-width: 132px;
-  }
-
-.dropdown-block ul.dropdown-list{
-    list-style: none;
-    position: absolute;
-    top: 40px;
-    left: 0;
-    background-color: white;
-    min-width: 100%;
-    display: none;
-    border-radius: 10px;
-  }
-  .dropdown-block ul.dropdown-list>li>a{
-    font-size: 1rem;
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
-    padding: 10px 0px;
-    position: relative;
-  }
-
-  .dropdown-block ul.dropdown-list>li>a::after{
-  content: "";
-  position: absolute;
-  width: 80%;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
-  height: 1px;
-  background-color: gray;
-}
-
-
-
-.dropdown-block ul.dropdown-list>li> a:hover{
-    background-color: black;
-    color: white;
-  }
-
-
-
-  ul.nav_list_left > li > a{
-    padding: 10px 10px ;
-  text-decoration: none;
-  text-align: center;
-  display: inline-block;
-  color: white;
-  }
-
-
-  ul.nav_list_left > li > a:hover{
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 10px;
-    color: rgb(73, 73, 73);
-    }
-
-
-
-  .language_link_list > li > a{
-  border: 1px solid gray;
-  color: black;
-  display: inline-block;
-  text-decoration: none;
-  width: 100%;
-  text-align: center;
-  padding: 5px 0;
-  }
-
-
-  ul.nav_list_right{
-    border: 3px solid yellow;
-    display: absolute;
-    right: 5%;
-    float:right;
-    }
-  ul.nav_list_right>li {
-    color: white;
-    list-style: none;
-    display: inline-block;
-    padding: 5px 5px;
-    margin: 10px;
-    }
-    ul.nav_list_right>li>a {
-     color: white;
-     display: inline-block;
-     text-decoration: none;
-     width: 100%;
-     text-align: center;
-     padding: 5px 0;
-    } */
 
 
 
@@ -295,89 +133,7 @@ div.dropdown-block:hover ul.dropdown-list{
     left: 20px;
 }
 
-.homepage-menu{
-    position: absolute;
-    border: 3px solid yellow;
-    width: 100%;
-    height: 100%;
-}
 
-
-.homepage-menu-select{
-    /* border: 5px solid grey; */
-    position: absolute;
-    padding: 14px 25px 12px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 400px;
-    height: 28px;
-    border-radius: 10px 0 0 10px;
-}
-
-
-span.homepage-search-icon{
-    position: absolute;
-    left: 384px;
-    top: 0px;
-    background: linear-gradient(270deg,#64d4b8,#17ad99);;
-    width: 64px;
-    height: 58px;
-    border-radius: 0 10px 10px 0;
-    cursor: pointer;
-
-}
-span.homepage-search-icon>img{
-    width:30px;
-    height:30px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 25%;
-    cursor: pointer;
-}
-
-
-.down-button{
-    position: absolute;
-    margin-left: 50%;
-    bottom: 0%;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
-    transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    cursor: pointer;
-}
-
-.down-button:after, .down-button:before {
-    content: "";
-    position: absolute;
-    display: inline-block;
-    width: 12px;
-    height: 2px;
-    background-color: #414042;
-}
-
-.down-button:after {
-    top: 23px;
-    left: 14px;
-    transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-.down-button:before {
-    left: 19px;
-    top: 28px;
-}
-
-
-/* page2: slider  */
-
-/* div.other_contents{
-    height: 500px;
-    border: 1px solid black;
-} */
 .homepage-partners-slider-container{
     border: 5px solid grey;
     /* width: 95%; */
