--- a/css/blog2_rwd.css
+++ b/css/blog2_rwd.css
@@ -104,7 +104,7 @@
     }
     
     ul.waterfall{
-      border: solid 1px red;
+      /* border: solid 1px red; */
      width: 80%;
      text-align: center;
       margin: auto;
@@ -135,7 +135,7 @@
      display: block;
     }
     ul.waterfall{
-      border: solid 1px red;
+      /* border: solid 1px red; */
      width: 80%;
      text-align: center;
       margin: auto;
@@ -168,7 +168,7 @@
      display: block;
     }
     ul.waterfall{
-      border: solid 1px red;
+      /* border: solid 1px red; */
      width: 80%;
      text-align: center;
       margin: auto;
@@ -196,7 +196,7 @@
 @media (max-width: 768px) {
 
     .foot>h1.foot1{
-        border: 3px solid yellow;
+        /* border: 3px solid yellow; */
         font-size: 22px;
         font-weight: bold;
         margin: 30px auto 20px;
@@ -211,7 +211,7 @@
         /* display: inline-flex; */
         text-align: center;
         /* margin-bottom: 30px; */
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
     }
     
     
@@ -235,7 +235,7 @@
   
     /* footer */
     .footer-part1{
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 80%;
         align-items: flex-start;
         /* border-bottom: none; */
@@ -250,7 +250,7 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         margin-top: 50px;
       
         color: grey;
@@ -276,7 +276,7 @@
       
       .footer-icon{
         display: flex;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         height: 50px;
         margin: 0 auto;
         flex-direction: row;
