--- a/css/discussion2_rwd.css
+++ b/css/discussion2_rwd.css
@@ -13,7 +13,7 @@
         /* position: fixed; */
         position: relative;
         top: 33px;
-         border: 1px solid red;
+         /* border: 1px solid red; */
         width: 100%;
         padding-left: 2%;
         display: flex;
@@ -33,7 +33,7 @@
         width: 10%;
         display: flex;
        margin: auto;
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
         margin-left: 7%;
         padding-top: 3px;
       }
@@ -43,14 +43,14 @@
        
         /* position: relative; */
   
-        border: 1px solid red;
+        /* border: 1px solid red; */
         color: grey
       }
       .language-switch>span.triangle1{
         display: flex;
         margin: auto;
         margin-left: 3%;
-        border: 10px solid red;
+        /* border: 10px solid red; */
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
         border-top: 10px solid rgb(148, 148, 148);
@@ -73,7 +73,7 @@
        
 
     }
-    .menu ul {
+    .menu>ul {
        position: absolute;
        top: 75%;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
@@ -81,7 +81,7 @@
         background: #fff;
         width: 100%;
     }
-    .menu li {
+    .menu>ul>li {
         margin: 10px 0px 10px 0px;
         float: none;
         display: block;
@@ -104,7 +104,7 @@
         margin-right: 5%;
         display: flex;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
       }
       .search-partner-input-btn{
         background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -113,7 +113,7 @@
         line-height: 64px;
         text-align: center;
         border-left: 1px solid #e9e9eb;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         border-radius: 10px 0 0 10px;
       
       }
@@ -129,7 +129,7 @@
         margin-left: 10px;
       }
       .search-partner-input input {
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 170px;
         height: 30px;
         font-size: 12px;
@@ -143,7 +143,7 @@
         width: 100%;
         margin-top: 100px;
         margin-bottom: 20px;
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
       }
 
      
@@ -164,7 +164,7 @@
             /* position: fixed; */
             position: relative;
             top: 33px;
-             border: 1px solid red;
+             /* border: 1px solid red; */
             width: 100%;
             padding-left: 2%;
             display: flex;
@@ -184,7 +184,7 @@
             width: 10%;
             display: flex;
            margin: auto;
-            border: 2px solid purple;
+            /* border: 2px solid purple; */
             margin-left: 7%;
             padding-top: 3px;
           }
@@ -194,14 +194,14 @@
            
             /* position: relative; */
       
-            border: 1px solid red;
+            /* border: 1px solid red; */
             color: grey
           }
           .language-switch>span.triangle1{
             display: flex;
             margin: auto;
             margin-left: 3%;
-            border: 10px solid red;
+            /* border: 10px solid red; */
             border-left: 8px solid transparent;
             border-right: 8px solid transparent;
             border-top: 10px solid rgb(148, 148, 148);
@@ -255,7 +255,7 @@
             margin-right: 5%;
             display: flex;
             align-items: center;
-            border: 1px solid red;
+            /* border: 1px solid red; */
           }
           .search-partner-input-btn{
             background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -264,7 +264,7 @@
             line-height: 64px;
             text-align: center;
             border-left: 1px solid #e9e9eb;
-            border: 1px solid blue;
+            /* border: 1px solid blue; */
             border-radius: 10px 0 0 10px;
           
           }
@@ -281,7 +281,7 @@
             margin-left: 8px;
           }
           .search-partner-input input {
-            border: 1px solid green;
+            /* border: 1px solid green; */
             width: 140px;
             height: 24px;
             font-size: 12px;
@@ -296,7 +296,7 @@
             width: 100%;
             margin-top: 100px;
             margin-bottom: 20px;
-            border: 2px solid orange;
+            /* border: 2px solid orange; */
           }
         .search-results>span{
          font-size: 18px;
@@ -316,7 +316,7 @@
         /* position: fixed; */
         position: relative;
         top: 33px;
-         border: 1px solid red;
+         /* border: 1px solid red; */
         width: 100%;
         padding-left: 2%;
         display: flex;
@@ -336,7 +336,7 @@
         width: 10%;
         display: flex;
        margin: auto;
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
         margin-left: 7%;
         padding-top: 3px;
       }
@@ -346,14 +346,14 @@
        
         /* position: relative; */
   
-        border: 1px solid red;
+        /* border: 1px solid red; */
         color: grey
       }
       .language-switch>span.triangle1{
         display: flex;
         margin: auto;
         margin-left: 3%;
-        border: 10px solid red;
+        /* border: 10px solid red; */
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
         border-top: 10px solid rgb(148, 148, 148);
@@ -407,7 +407,7 @@
         margin-right: 5%;
         display: flex;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
       }
       .search-partner-input-btn{
         background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -416,7 +416,7 @@
         line-height: 64px;
         text-align: center;
         border-left: 1px solid #e9e9eb;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         border-radius: 10px 0 0 10px;
       
       }
@@ -433,7 +433,7 @@
         margin-left: 8px;
       }
       .search-partner-input input {
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 120px;
         height: 24px;
         font-size: 12px;
@@ -448,7 +448,7 @@
         width: 100%;
         margin-top: 85px;
         margin-bottom: 20px;
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
       }
     .search-results>span{
      font-size: 18px;
@@ -502,7 +502,16 @@
     .title-none{
       display: none;
     }
-
+    .light {
+      /* border: 1px solid red; */
+      padding-left: 16px;
+      /* margin-left: 430px; */
+      position: relative;
+      padding-top: 30px;
+      display: none;
+      font-size: 12px;
+      text-transform: uppercase;
+  }
 
 }
 
@@ -527,12 +536,11 @@
       display: none;
     }
 }
-
 /* footer */
 @media (max-width: 768px) {
 
   .foot>h1.foot1{
-      border: 3px solid yellow;
+      /* border: 3px solid yellow; */
       font-size: 22px;
       font-weight: bold;
       color: white;
@@ -548,7 +556,7 @@
       /* display: inline-flex; */
       text-align: center;
       /* margin-bottom: 30px; */
-      border: 2px solid purple;
+      /* border: 2px solid purple; */
   }
   
   
@@ -568,17 +576,13 @@
       line-height: 40px;
       cursor: pointer;
   }
-  
-
-
-
 
 
 
 
   /* footer */
   .footer-part1{
-      border: 1px solid green;
+      /* border: 1px solid green; */
       width: 100%;
       align-items: flex-start;
       /* border-bottom: none; */
@@ -593,7 +597,7 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      border: 1px solid red;
+      /* border: 1px solid red; */
       margin-top: 20px;
   
       color: grey;
@@ -603,6 +607,8 @@
   }
   .footer-language>h3{
       color: black;
+      width: initial;
+      margin-bottom: 20px;
   }
   .language-container>ul{
       margin: 0;
@@ -616,9 +622,17 @@
       
   }
   
-
+  .footer-icon{
+      display: flex;
+      /* border: 1px solid blue; */
+      width: 10%;
+      height: 50px;
+      margin: 0 auto;
+      flex-direction: row;
+      align-items: flex-end;
+  }
   .footer-icon img{
-      padding-right: 10px;
+      /* padding-right: 12px; */
   
   }
 }
