--- a/css/exchange2_rwd.css
+++ b/css/exchange2_rwd.css
@@ -13,7 +13,7 @@
         /* position: fixed; */
         position: relative;
         top: 33px;
-         border: 1px solid red;
+         /* border: 1px solid red; */
         width: 100%;
         padding-left: 2%;
         display: flex;
@@ -33,7 +33,7 @@
         width: 10%;
         display: flex;
        margin: auto;
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
         margin-left: 7%;
         padding-top: 3px;
       }
@@ -43,14 +43,14 @@
        
         /* position: relative; */
   
-        border: 1px solid red;
+        /* border: 1px solid red; */
         color: grey
       }
       .language-switch>span.triangle1{
         display: flex;
         margin: auto;
         margin-left: 3%;
-        border: 10px solid red;
+        /* border: 10px solid red; */
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
         border-top: 10px solid rgb(148, 148, 148);
@@ -101,10 +101,12 @@
     }
 
     .search-partner-input {
-        margin-right: 5%;
+        position: absolute;
+        right: 14px;
+        top: 3px;
         display: flex;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
       }
       .search-partner-input-btn{
         background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -113,7 +115,7 @@
         line-height: 64px;
         text-align: center;
         border-left: 1px solid #e9e9eb;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         border-radius: 10px 0 0 10px;
       
       }
@@ -129,7 +131,7 @@
         margin-left: 10px;
       }
       .search-partner-input input {
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 170px;
         height: 30px;
         font-size: 12px;
@@ -143,7 +145,7 @@
         width: 100%;
         margin-top: 100px;
         margin-bottom: 20px;
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
       }
 
      
@@ -164,7 +166,7 @@
             /* position: fixed; */
             position: relative;
             top: 33px;
-             border: 1px solid red;
+             /* border: 1px solid red; */
             width: 100%;
             padding-left: 2%;
             display: flex;
@@ -184,7 +186,7 @@
             width: 10%;
             display: flex;
            margin: auto;
-            border: 2px solid purple;
+            /* border: 2px solid purple; */
             margin-left: 7%;
             padding-top: 3px;
           }
@@ -194,14 +196,14 @@
            
             /* position: relative; */
       
-            border: 1px solid red;
+            /* border: 1px solid red; */
             color: grey
           }
           .language-switch>span.triangle1{
             display: flex;
             margin: auto;
             margin-left: 3%;
-            border: 10px solid red;
+            /* border: 10px solid red; */
             border-left: 8px solid transparent;
             border-right: 8px solid transparent;
             border-top: 10px solid rgb(148, 148, 148);
@@ -224,7 +226,7 @@
            
     
         }
-        .menu ul {
+        .menu>ul {
            position: absolute;
            top: 75%;
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
@@ -232,7 +234,7 @@
             background: #fff;
             width: 100%;
         }
-        .menu li {
+        .menu>ul>li {
             margin: 10px 0px 10px 0px;
             float: none;
             display: block;
@@ -252,19 +254,21 @@
         }
     
         .search-partner-input {
-            margin-right: 5%;
-            display: flex;
-            align-items: center;
-            border: 1px solid red;
+          right: 14px;
+          top: 7px;
+          position: absolute;
+          display: flex;
+          align-items: center;
+          /* border: 1px solid red; */
           }
           .search-partner-input-btn{
             background: linear-gradient(270deg,#64d4b8,#17ad99);
-            width: 28px;
-            height: 24px;
+            width: 34px;
+            height: 30px;
             line-height: 64px;
             text-align: center;
             border-left: 1px solid #e9e9eb;
-            border: 1px solid blue;
+            /* border: 1px solid blue; */
             border-radius: 10px 0 0 10px;
           
           }
@@ -281,9 +285,9 @@
             margin-left: 8px;
           }
           .search-partner-input input {
-            border: 1px solid green;
+            /* border: 1px solid green; */
             width: 140px;
-            height: 24px;
+            height: 30px;
             font-size: 12px;
             font-weight: 300;
             border-radius: 0 10px 10px 0;
@@ -296,7 +300,7 @@
             width: 100%;
             margin-top: 100px;
             margin-bottom: 20px;
-            border: 2px solid orange;
+            /* border: 2px solid orange; */
           }
         .search-results>span{
          font-size: 18px;
@@ -316,7 +320,7 @@
         /* position: fixed; */
         position: relative;
         top: 33px;
-         border: 1px solid red;
+         /* border: 1px solid red; */
         width: 100%;
         padding-left: 2%;
         display: flex;
@@ -336,7 +340,7 @@
         width: 10%;
         display: flex;
        margin: auto;
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
         margin-left: 7%;
         padding-top: 3px;
       }
@@ -346,14 +350,14 @@
        
         /* position: relative; */
   
-        border: 1px solid red;
+        /* border: 1px solid red; */
         color: grey
       }
       .language-switch>span.triangle1{
         display: flex;
         margin: auto;
         margin-left: 3%;
-        border: 10px solid red;
+        /* border: 10px solid red; */
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
         border-top: 10px solid rgb(148, 148, 148);
@@ -376,7 +380,7 @@
        
 
     }
-    .menu ul {
+    .menu>ul {
        position: absolute;
        top: 75%;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
@@ -384,7 +388,7 @@
         background: #fff;
         width: 100%;
     }
-    .menu li {
+    .menu>ul>li {
         margin: 10px 0px 10px 0px;
         float: none;
         display: block;
@@ -404,10 +408,10 @@
     }
 
     .search-partner-input {
-        margin-right: 5%;
+       
         display: flex;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
       }
       .search-partner-input-btn{
         background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -416,7 +420,7 @@
         line-height: 64px;
         text-align: center;
         border-left: 1px solid #e9e9eb;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         border-radius: 10px 0 0 10px;
       
       }
@@ -433,7 +437,7 @@
         margin-left: 8px;
       }
       .search-partner-input input {
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 120px;
         height: 24px;
         font-size: 12px;
@@ -448,11 +452,32 @@
         width: 100%;
         margin-top: 85px;
         margin-bottom: 20px;
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
       }
     .search-results>span{
      font-size: 18px;
     }
+    select.custom_select {
+      font-family: inherit;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      outline: none;
+      background: none;
+      /* border: 1px solid gray; */
+      width: 110px;
+      margin-top: 4px;
+      margin-bottom: 4px;
+      padding: 3px 3px;
+      background-image: url(https://img.icons8.com/android/24/000000/down.png);
+      background-repeat: no-repeat;
+      background-size: 12px;
+      background-position: right 2px center;
+      cursor: pointer;
+      font-size: 1rem;
+      border-radius: 10px;
+  }
+  
 }
 
 
@@ -535,7 +560,7 @@ cursor: pointer; */
 @media (max-width: 768px) {
 
   .foot>h1.foot1{
-      border: 3px solid yellow;
+      /* border: 3px solid yellow; */
       font-size: 22px;
       font-weight: bold;
       color: white;
@@ -551,7 +576,7 @@ cursor: pointer; */
       /* display: inline-flex; */
       text-align: center;
       /* margin-bottom: 30px; */
-      border: 2px solid purple;
+      /* border: 2px solid purple; */
   }
   
   
@@ -571,32 +596,13 @@ cursor: pointer; */
       line-height: 40px;
       cursor: pointer;
   }
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
 
   /* footer */
   .footer-part1{
-      border: 1px solid green;
+      /* border: 1px solid green; */
       width: 100%;
       align-items: flex-start;
       /* border-bottom: none; */
@@ -611,7 +617,7 @@ cursor: pointer; */
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      border: 1px solid red;
+      /* border: 1px solid red; */
       margin-top: 20px;
   
       color: grey;
@@ -636,7 +642,7 @@ cursor: pointer; */
   
   .footer-icon{
       display: flex;
-      border: 1px solid blue;
+      /* border: 1px solid blue; */
       width: 10%;
       height: 50px;
       margin: 0 auto;
@@ -644,7 +650,7 @@ cursor: pointer; */
       align-items: flex-end;
   }
   .footer-icon img{
-      padding-right: 12px;
+      /* padding-right: 12px; */
   
   }
 }
