--- a/css/index_rwd.css
+++ b/css/index_rwd.css
@@ -94,26 +94,7 @@
 
 @media (min-width: 400px) and (max-width: 767px){
 
-    /* .nav_list_container{
-        width: 30%;
-        height: 220px;
-        margin-right: 0;
-        background-color: black; opacity: 0.8;
-    }
-    ul.nav_list_left{
-        float: left;
-
-    }
-    ul.nav_list_right{
-        float: right;
-    }
-    ul.nav_list_left>li {
-        display: block;
-        border: none;
-    }
-    ul.nav_list_right>li{
-        display: block;
-    } */
+   
     .homepage-native{
         width: 80%;
         height: 30%;
@@ -182,6 +163,39 @@
     .down-button{
         display: none;
     }
+    .selectbox-container {
+        /* border: 1px solid red; */
+     position: relative;
+      margin: 0px;
+      /* text-align: center */
+    }
+    
+    /*Styling Selectbox*/
+    .selectbox-dropdown {
+      outline: 0;
+      /* border: 1px solid blue; */
+      width: 200px;
+      display: inline-block;
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 0 2px rgb(204, 204, 204);
+      transition: all .5s ease;
+      position: relative;
+      font-size: 16px;
+      color: #474747;
+      height: 100%;
+      text-align: left
+    }
+    span.selectbox-homepage-search-icon {
+        position: absolute;
+        left: 200px;
+        /* top: 1px; */
+        background: linear-gradient(270deg,#64d4b8,#17ad99);
+        width: 44px;
+        height: 38px;
+        border-radius: 0 10px 10px 0;
+        cursor: pointer;
+    }
 }
 
 /* page2: slider */
@@ -204,7 +218,7 @@
         margin-bottom: 40px;
     }
     .homepage-partner-detail{
-        border: 1px solid purple;
+        /* border: 1px solid purple; */
         position: absolute;
         bottom: -20px;
         right: -10px;
@@ -256,7 +270,7 @@
         margin-bottom: 40px;
     }
     .homepage-partner-detail{
-        border: 1px solid purple;
+        /* border: 1px solid purple; */
         position: absolute;
         bottom: -20px;
         right: -10px;
@@ -316,7 +330,7 @@
         margin-bottom: 40px;
     }
     .homepage-partner-detail{
-        border: 1px solid purple;
+        /* border: 1px solid purple; */
         position: absolute;
         bottom: -20px;
         right: -10px;
@@ -363,12 +377,12 @@
         display: none;
     }
     .how-it-work-page-rwd{
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         margin: 0px auto;
         width: 90%;
     }
     .how-it-work-page-step-rwd{
-        border: 5px solid green;
+        /* border: 5px solid green; */
         display: block;
         width: 100%;
         margin: 0 auto 50px auto;
@@ -383,11 +397,11 @@
     
     .how-it-work-page-content-rwd{
     
-        border: 4px solid red;;
+        /* border: 4px solid red;; */
     }
     
     .how-it-work-page-step-img-rwd{
-        border:2px solid chartreuse;
+        /* border:2px solid chartreuse; */
     }
     
     .how-it-work-page-step-img-rwd>video{
@@ -405,18 +419,18 @@
     }
     .how-it-work-page-step-explain-rwd {
         position: relative;
-        border: 2px solid blueviolet;
+        /* border: 2px solid blueviolet; */
        
     }
     
     .how-it-work-page-step-explain-rwd>h1{
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
         margin:0px 0 20px 0px;
         font-size: 20px;
         color: #414042;
     }
     .how-it-work-page-step-explain-rwd>p{
-        border: 2px solid yellow;
+        /* border: 2px solid yellow; */
         width: 100%;
         font-size: 16px;
         line-height: 1.5;
@@ -441,12 +455,12 @@
         display: none;
     }
     .how-it-work-page-rwd{
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         margin: 0px auto;
         width: 80%;
     }
     .how-it-work-page-step-rwd{
-        border: 5px solid green;
+        /* border: 5px solid green; */
         display: block;
         width: 100%;
         margin: 0 auto 50px auto;
@@ -459,10 +473,10 @@
         color: #414042;
     }
     .how-it-work-page-content-rwd{
-        border: 4px solid red;;
+        /* border: 4px solid red;; */
     }
     .how-it-work-page-step-img-rwd{
-        border:2px solid chartreuse;
+        /* border:2px solid chartreuse; */
     }
     .how-it-work-page-step-img-rwd>video{
         width: 270px;
@@ -477,10 +491,10 @@
     }
     .how-it-work-page-step-explain-rwd {
         position: relative;
-        border: 2px solid blueviolet;
+        /* border: 2px solid blueviolet; */
     }
     .how-it-work-page-step-explain-rwd>h1{
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
         margin:0px 0 10px -90px;
         font-size: 16px; 
         line-height: 1.1;
@@ -488,7 +502,7 @@
         width: 100%;
     }
     .how-it-work-page-step-explain-rwd>p{
-        border: 2px solid yellow;
+        /* border: 2px solid yellow; */
         width: 100%;
         font-size: 14px;
         line-height: 1.2;
@@ -513,12 +527,12 @@
         display: none;
     }
     .how-it-work-page-rwd{
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         margin: 0px auto;
         width: 90%;
     }
     .how-it-work-page-step-rwd{
-        border: 5px solid green;
+        /* border: 5px solid green; */
         display: block;
         width: 100%;
         margin: 0 auto 0px auto;
@@ -531,10 +545,10 @@
         color: #414042;
     }
     .how-it-work-page-content-rwd{
-        border: 4px solid red;;
+        /* border: 4px solid red;; */
     }
     .how-it-work-page-step-img-rwd{
-        border:2px solid chartreuse;
+        /* border:2px solid chartreuse; */
     }
     .how-it-work-page-step-img-rwd>video{
         width: 230px;
@@ -549,17 +563,17 @@
     }
     .how-it-work-page-step-explain-rwd {
         position: relative;
-        border: 2px solid blueviolet;
+        /* border: 2px solid blueviolet; */
     }
     .how-it-work-page-step-explain-rwd>h1{
-        border: 2px solid orange;
+        /* border: 2px solid orange; */
         margin:0px 0 10px -110px;
         font-size: 18px;
         color: #414042;
         width: 100%;
     }
     .how-it-work-page-step-explain-rwd>p{
-        border: 2px solid yellow;
+        /* border: 2px solid yellow; */
         width: 150%;
         font-size: 18px;
         line-height: 1.2;
@@ -591,7 +605,7 @@
 @media (max-width: 768px) {
 
     .foot>h1.foot1{
-        border: 3px solid yellow;
+        /* border: 3px solid yellow; */
         font-size: 22px;
         font-weight: bold;
         color: white;
@@ -607,7 +621,7 @@
         /* display: inline-flex; */
         text-align: center;
         /* margin-bottom: 30px; */
-        border: 2px solid purple;
+        /* border: 2px solid purple; */
     }
     
     
@@ -630,7 +644,7 @@
     
     /* footer */
     .footer-part1{
-        border: 1px solid green;
+        /* border: 1px solid green; */
         width: 100%;
         align-items: flex-start;
         /* border-bottom: none; */
@@ -645,7 +659,7 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         margin-top: 20px;
     
         color: grey;
@@ -670,7 +684,7 @@
     
     .footer-icon{
         display: flex;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         width: 10%;
         height: 50px;
         margin: 0 auto;
