--- a/css/lanwiz_exchange2.css
+++ b/css/lanwiz_exchange2.css
@@ -24,15 +24,16 @@ body{
     width: 100%;
     /* height: 70px; */
     display: flex;
+    border-bottom: rgb(155, 155, 155);
     background: #fff;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.3);
 }
 .menu2 {
     z-index: 9;
+    top: 1px;
     /* position: fixed; */
     position: relative;
-    /* top: 64px; */
-     border: 1px solid red;
+     /* border: 1px solid red; */
     width: 100%;
     padding-left: 2%;
     display: flex;
@@ -45,7 +46,7 @@ body{
   width: 100%;
 }
 .menu>ul>li {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
    float: right;
     list-style: none;
     font-size: 16px;
@@ -54,7 +55,11 @@ body{
     padding: 6px 6px 6px 10px;
 }
 
-.menu2 li {
+.menu>ul>li.current-active>a{
+  color:#17ad99;
+}
+
+/* .menu2 li {
     border: 1px solid rgb(173, 171, 171);
     border-radius: 10px;
    float: left;
@@ -62,8 +67,31 @@ body{
     font-size: 16px;
     margin: 10px;
     padding: 6px 10px;
-}
+} */
 
+select.custom_select{
+  color: #474747;
+  font-family: inherit;
+  /* 清除掉預設外觀 */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  background: none;
+  
+  border: 1px solid gray;
+  width: 100px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  background-image: url("https://img.icons8.com/android/24/000000/down.png");
+  background-repeat: no-repeat;
+  background-size: 12px;
+  background-position: right 8px center; /* 這是：水平方向是距離右側 8px 的意思；然後垂直方向是 center */
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 10px;
+}
 .menu li a, .menu2 li a {
    
     text-decoration: none;
@@ -85,21 +113,21 @@ body{
 .language-switch{
   width: 10%;
   display: flex;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin-left: 7%;
 }
 .language-switch>h1{
   display: flex;
   /* position: relative; */
   margin: auto;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   color: grey
 }
 .language-switch>span.triangle1{
   display: flex;
   margin: auto;
   margin-left: 3%;
-  border: 10px solid red;
+  /* border: 10px solid red; */
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 10px solid rgb(148, 148, 148);
@@ -118,10 +146,12 @@ body{
     /* z-index: 9; */
 }
 .search-partner-input {
-  margin-right: 5%;
+  position: absolute;
+  right: 14px;
+  top: 3px;
   display: flex;
   align-items: center;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .search-partner-input-btn{
   background: linear-gradient(270deg,#64d4b8,#17ad99);
@@ -130,7 +160,7 @@ body{
   line-height: 64px;
   text-align: center;
   border-left: 1px solid #e9e9eb;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   border-radius: 10px 0 0 10px;
 
 }
@@ -146,7 +176,7 @@ body{
   margin-left: 12px;
 }
 .search-partner-input input {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width: 200px;
   height: 38px;
   font-size: 14px;
@@ -162,12 +192,12 @@ body{
     width: 100%;
     margin-top: 140px;
     margin-bottom: 20px;
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
   }
   .search-results>span{
     font-size: 20px;
     display: block;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     text-align: center;
   }
   
@@ -175,7 +205,7 @@ body{
    .partner-card-container{
     position: relative;
     z-index: 1;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* margin-top: 10%;*/
     width: 100%;
     /* padding-top: 100px; */
@@ -185,7 +215,7 @@ body{
   
   .cards{
     width: 70%;
-      border: 6px solid green;
+      /* border: 6px solid green; */
       /* position: relative; */
       margin-left: 50%;
       transform: translateX(-50%);
@@ -193,7 +223,7 @@ body{
       margin-bottom: 20px;
   }
   .cards-left{
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
       position: relative;
       width: 60%;
       
@@ -205,12 +235,12 @@ body{
   }
   
   .cards-left-detail{
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     display: flex;
   }
   
   .ant-avatar-icon>img {
-    border: 2px solid black;
+    /* border: 2px solid black; */
       margin-top: 20px;
       display: block;
       width: 100%;
@@ -252,7 +282,7 @@ body{
   .new-avatar-information{
     position: relative;
     margin: 0 auto;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
   .new-avatar-information h1 {
     
@@ -283,7 +313,7 @@ body{
       /* text-transform: uppercase; */
   }
   .cards-right{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
       position: relative;
       width: 40%;
       box-shadow: rgba(0, 0, 0, 0.1) 5px 7px 25px 0px;
@@ -317,6 +347,11 @@ body{
    width: 40%;
    padding: 25px;
     /* margin-top: 140px; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 7px 25px 0px;
+    cursor: pointer;
+    padding: 25px;
+    border-radius: 6px;
+    background: rgb(255, 255, 255);
   }
   .container{
     /* border: 1px solid green; */
@@ -418,7 +453,7 @@ body{
     /* background-attachment: scroll; */
     width: 100%;
     text-align: center;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     color: white;
     background-image: url(../picture/people/man_laptop3.jpg);
     background-size: cover;
@@ -429,11 +464,12 @@ body{
 
 .foot{
     padding: 0;
-    border: 8px solid green;
+    /* border: 8px solid green; */
     margin: auto;
 }
 .foot>h1.foot1{
-    border: 3px solid yellow;
+    padding: 30px;
+    /* border: 3px solid yellow; */
     font-size: 2.4rem;
     font-weight: bold;
     color: white;
@@ -449,7 +485,7 @@ body{
     /* display: inline-flex; */
     text-align: center;
     /* margin-bottom: 30px; */
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
 }
 
 
@@ -471,7 +507,7 @@ body{
 
 /* footer */
 .footer-part1{
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width: 80%;
   align-items: flex-start;
   /* border-bottom: none; */
@@ -486,7 +522,7 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin-top: 50px;
 
   color: grey;
@@ -521,8 +557,9 @@ body{
 }
 
 .footer-icon{
+  border-top:1px solid grey ;
   display: flex;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   /* height: 50px; */
   margin: 0 auto;
   flex-direction: row;
