--- a/css/lanwiz_login.css
+++ b/css/lanwiz_login.css
@@ -9,20 +9,23 @@
     background-color: hsla(0, 0%, 0%, .5);
     
     /* 預設：完全透明；設定 z-index: -1 會在整個頁面的後方，看不到，才不會擋到頁面元素。 */
-    opacity: 0;
+    /* opacity: 0;/* 應改成display: none; */
+    display: none;
     z-index: -1;
     transition: opacity 1s;
   }
   div.overlay.-on{
     
     /* 加上 -on 之後，Modal 漸漸出現，因為有設定 transition */
-    opacity: 1;
+    /* opacity: 1;/* 應改成display: block; */
+    display: block;
     z-index: 100;
   }
   
   div.overlay.-opacity-zero{
     /* 關閉 Modal 時，先讓 opacity設定0，就會慢慢變成完全透明，但這時會擋到後面的元素，所以要再移除 -on 及 -opacity-zero 這兩個 class */
-    opacity: 0;
+    /* opacity: 0; */
+    display: none;
   }
   
   /* 元素 article 置中及基本樣式 */
@@ -48,7 +51,7 @@ body{
     width: 200px;
     height: 20px;
     margin: 10px;
-    color: #df5334;
+    color: #64d4b8;
   }
   
   h5{
@@ -67,7 +70,7 @@ body{
     height: 300px;
     background-color: white;
     border-radius: 5px;
-    border-top: 10px solid #df5334;
+    border-top: 10px solid #64d4b8;
     box-shadow: 0 0px 70px rgba(0, 0, 0, 0.1);
     
     /*定位對齊*/
@@ -87,7 +90,7 @@ body{
   
   .submit{
     color: white;  
-    background: #df5334;
+    background: #64d4b8;
     width: 200px;
     height: 30px;
     margin: 10px;
@@ -97,7 +100,7 @@ body{
   }
   
   .submit:hover{
-    background: #db6937;
+    background: #1d8d7a;
   }
   
   #container2{
