--- a/selectbox/selectbox.css
+++ b/selectbox/selectbox.css
@@ -7,16 +7,16 @@
     display: inherit
   }
   .selectbox-container {
-      border: 1px solid red;
+      /* border: 1px solid red; */
    position: relative;
-    margin: 34px auto 0;
+    margin: 16px auto 0;
     /* text-align: center */
   }
   
   /*Styling Selectbox*/
   .selectbox-dropdown {
     outline: 0;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 300px;
     display: inline-block;
     background-color: #fff;
@@ -26,7 +26,7 @@
     position: relative;
     font-size: 18px;
     color: #474747;
-    height: 100%;
+    height: 46px;
     text-align: left
   }
   .selectbox-dropdown .selectbox-select {
@@ -72,7 +72,7 @@
       z-index: 9
   }
   .selectbox-dropdown .selectbox-dropdown-menu li {
-      padding: 10px;
+      padding: 5px;
       transition: all .2s ease-in-out;
       cursor: pointer
   } 
@@ -91,10 +91,10 @@
   span.selectbox-homepage-search-icon{
     position: absolute;
     left: 298px;
-    top: 1px;
+    /* top: 1px; */
     background: linear-gradient(270deg,#64d4b8,#17ad99);;
     width: 50px;
-    height: 42px;
+    height: 46px;
     border-radius: 0 10px 10px 0;
     cursor: pointer;
 
