--- a/selectbox/selectbox_exchange_english.css
+++ b/selectbox/selectbox_exchange_english.css
@@ -38,6 +38,9 @@
       display: block;
       /* padding: 10px */
   }
+  .selectbox-dropdown .selectbox-select>span{
+      color: black;
+  }
   .selectbox-dropdown .selectbox-select > i {
       font-size: 13px;
       color: #888;
@@ -76,7 +79,7 @@
       z-index: 9
   }
   .selectbox-dropdown .selectbox-dropdown-menu li {
-      padding: 10px;
+      padding: 5px;
       transition: all .2s ease-in-out;
       cursor: pointer
   } 
