exchange page update

--- a/css/exchange2_rwd.css
+++ b/css/exchange2_rwd.css
@@ -510,6 +510,15 @@
         width: 70px;
       height: 70px;
     }
+    .request-btn{
+      padding: 6px 10px;
+    }
+    .cards-left{
+      padding: 12px;
+    }
+    .new-avatar{
+      margin-right: 12px;
+    }
 }
 
 
